--- a/cmake/CMakeLists.txt
+++ b/cmake/CMakeLists.txt
@@ -21,4 +21,5 @@ set(PROJECT_CPPDEFINES ${CMAKE_CPPDEFINES} -DBOOST_DISABLE_ASSERTS)
 set(PROJECT_CPPDEFINES ${CMAKE_CPPDEFINES} -DCMSSW_GIT_HASH="CMSSW_10_1_0" -DPROJECT_NAME="CMSSW" -DPROJECT_VERSION="CMSSW_10_1_0")
 set(INCLUDE_DIRS ${INCLUDE_DIRS} ${CMAKE_SOURCE_DIR})
 set(CMAKE_EXE_LINKER_FLAGS -pthread)
+include(CTest)
 process_subdirs()
