Set the output of add_library and add_executable to a common directory. Set PATH and LD_LIBRARY_PATH to the common directory for tests. Make reflex output the rootmap and pcm files to the common directory.

--- a/cmake/CMakeLists.txt
+++ b/cmake/CMakeLists.txt
@@ -10,6 +10,7 @@ set(CMAKE_CXX_FLAGS_INIT "")
 set(CMAKE_CXX_FLAGS_RELEASE "")
 set(CMAKE_CXX_FLAGS "")
 include (${CMAKE_SOURCE_DIR}/../cmssw-cmake/cmake/all.cmake)
+include (${CMAKE_SOURCE_DIR}/../cmssw-cmake/cmssw/FindRuntime.cmake)
 if(NOT CMAKE_COMPILER)
   set(CMAKE_COMPILER gcc)
 endif()
