--- a/cmake/CMakeLists.txt
+++ b/cmake/CMakeLists.txt
@@ -23,4 +23,9 @@ set(LIBRARY_DIRS ${CMAKE_INSTALL_PREFIX}/external/${CMSSW_ARCH}/lib ${GCC_CXXCOM
 set(INCLUDE_DIRS ${INCLUDE_DIRS} ${CMAKE_SOURCE_DIR})
 set(CMAKE_EXE_LINKER_FLAGS -pthread)
 include(CTest)
-process_subdirs()
+file(GLOB subdirs "*/*/*")
+foreach(dir ${subdirs})
+  if(IS_DIRECTORY ${dir} AND EXISTS ${dir}/CMakeLists.txt)
+    add_subdirectory(${dir})
+  endif()
+endforeach()
