--- a/cmake/CMakeLists.txt
+++ b/cmake/CMakeLists.txt
@@ -19,7 +19,7 @@ if(${CMAKE_COMPILER} STREQUAL gcc)
 endif()
 set(PROJECT_CPPDEFINES ${CMAKE_CPPDEFINES} -DBOOST_DISABLE_ASSERTS)
 set(PROJECT_CPPDEFINES ${CMAKE_CPPDEFINES} -DCMSSW_GIT_HASH="CMSSW_10_1_0" -DPROJECT_NAME="CMSSW" -DPROJECT_VERSION="CMSSW_10_1_0")
-set(LIBRARY_DIRS ${CMAKE_INSTALL_PREFIX}/external/${CMSSW_ARCH}/lib ${GCC_CXXCOMPILER_ROOT}/lib ${GCC_CXXCOMPILER_ROOT}/lib64)
+set(LIBRARY_DIRS ${CMAKE_INSTALL_PREFIX}/external/${SCRAM_ARCH}/lib ${GCC_CXXCOMPILER_ROOT}/lib ${GCC_CXXCOMPILER_ROOT}/lib64)
 set(INCLUDE_DIRS ${INCLUDE_DIRS} ${CMAKE_SOURCE_DIR})
 set(CMAKE_EXE_LINKER_FLAGS -pthread)
 include(CTest)
