--- a/cmake/CMakeLists.txt
+++ b/cmake/CMakeLists.txt
@@ -14,8 +14,8 @@ if(NOT CMAKE_COMPILER)
   set(CMAKE_COMPILER gcc)
 endif()
 if(${CMAKE_COMPILER} STREQUAL gcc)
-  cms_find_package(GCC_CXXCOMPILER)
-  cms_find_package(GCC_CCOMPILER)
+  cms_find_package(gcc_cxxcompiler)
+  cms_find_package(gcc_ccompiler)
 endif()
 set(PROJECT_CPPDEFINES ${CMAKE_CPPDEFINES} -DBOOST_DISABLE_ASSERTS)
 set(PROJECT_CPPDEFINES ${CMAKE_CPPDEFINES} -DCMSSW_GIT_HASH="CMSSW_10_1_0" -DPROJECT_NAME="CMSSW" -DPROJECT_VERSION="CMSSW_10_1_0")
