attempt to use targets

--- a/cmake/CMakeLists.txt
+++ b/cmake/CMakeLists.txt
@@ -10,6 +10,16 @@ set(CMAKE_CXX_FLAGS_INIT "")
 set(CMAKE_CXX_FLAGS_RELEASE "")
 set(CMAKE_CXX_FLAGS "")
 include (${CMAKE_SOURCE_DIR}/../cmssw-cmake/cmake/all.cmake)
+file(GLOB includes ${CMAKE_SOURCE_DIR}/../cmssw-cmake/modules/Find*.cmake )
+foreach(inc ${includes})
+  include("${inc}")  
+  unset(LIBS)
+  unset(USES)
+  unset(INCLUDE_DIRS)
+  unset(LIBRARY_DIRS)
+  unset(PROJECT_CXXFLAGS)
+  unset(PROJECT_CPPDEFINES)
+endforeach()
 if(NOT CMAKE_COMPILER)
   set(CMAKE_COMPILER gcc)
 endif()
