towards preloading cmake modules

--- a/cmake/CMakeLists.txt
+++ b/cmake/CMakeLists.txt
@@ -23,6 +23,18 @@ set(LIBRARY_DIRS ${CMAKE_INSTALL_PREFIX}/external/${SCRAM_ARCH}/lib ${GCC_CXXCOM
 set(INCLUDE_DIRS ${INCLUDE_DIRS} ${CMAKE_SOURCE_DIR})
 set(CMAKE_EXE_LINKER_FLAGS -pthread)
 include(CTest)
+file(GLOB modules "${CMAKE_SOURCE_DIR}/../cmssw-cmake/tools/*.cmake")
+foreach(mod ${modules})
+  include("${mod}")
+endforeach()
+file(GLOB modules "${CMAKE_SOURCE_DIR}/../cmssw-cmake/coral/*.cmake")
+foreach(mod ${modules})
+  include("${mod}")
+endforeach()
+file(GLOB modules "${CMAKE_SOURCE_DIR}/../cmssw-cmake/cmssw/*.cmake")
+foreach(mod ${modules})
+  include("${mod}")
+endforeach()
 file(GLOB subdirs "*/*/*")
 foreach(dir ${subdirs})
   if(IS_DIRECTORY ${dir} AND EXISTS ${dir}/CMakeLists.txt)
