preloading cmake modules saves time but uses more memory

--- a/cmake/CMakeLists.txt
+++ b/cmake/CMakeLists.txt
@@ -16,11 +16,13 @@ endif()
 if(${CMAKE_COMPILER} STREQUAL gcc)
   cms_find_package(gcc_cxxcompiler)
   cms_find_package(gcc_ccompiler)
+  list(APPEND PROJECT_CXXFLAGS ${gcc_cxxcompiler_PROJECT_CXXFLAGS})
+  list(APPEND PROJECT_CFLAGS ${gcc_cxxcompiler_PROJECT_CFLAGS})
 endif()
-set(PROJECT_CPPDEFINES ${CMAKE_CPPDEFINES} -DBOOST_DISABLE_ASSERTS)
-set(PROJECT_CPPDEFINES ${CMAKE_CPPDEFINES} -DCMSSW_GIT_HASH="CMSSW_10_1_0" -DPROJECT_NAME="CMSSW" -DPROJECT_VERSION="CMSSW_10_1_0")
-set(LIBRARY_DIRS ${CMAKE_INSTALL_PREFIX}/external/${SCRAM_ARCH}/lib ${GCC_CXXCOMPILER_ROOT}/lib ${GCC_CXXCOMPILER_ROOT}/lib64)
-set(INCLUDE_DIRS ${INCLUDE_DIRS} ${CMAKE_SOURCE_DIR})
+list(APPEND PROJECT_CPPDEFINES ${CMAKE_CPPDEFINES} -DBOOST_DISABLE_ASSERTS)
+list(APPEND PROJECT_CPPDEFINES ${CMAKE_CPPDEFINES} -DCMSSW_GIT_HASH="CMSSW_10_1_0" -DPROJECT_NAME="CMSSW" -DPROJECT_VERSION="CMSSW_10_1_0")
+list(APPEND CMSSW_LIBRARY_DIRS ${CMAKE_INSTALL_PREFIX}/external/${SCRAM_ARCH}/lib ${GCC_CXXCOMPILER_ROOT}/lib ${GCC_CXXCOMPILER_ROOT}/lib64)
+list(APPEND CMSSW_INCLUDE_DIRS ${CMAKE_SOURCE_DIR})
 set(CMAKE_EXE_LINKER_FLAGS -pthread)
 include(CTest)
 file(GLOB modules "${CMAKE_SOURCE_DIR}/../cmssw-cmake/tools/*.cmake")
@@ -35,9 +37,12 @@ file(GLOB modules "${CMAKE_SOURCE_DIR}/../cmssw-cmake/cmssw/*.cmake")
 foreach(mod ${modules})
   include("${mod}")
 endforeach()
-file(GLOB subdirs "*/*/*")
+set(dirnames src bin test plugins interface)
+foreach(dirname ${dirnames})
+file(GLOB subdirs "*/*/${dirname}")
 foreach(dir ${subdirs})
   if(IS_DIRECTORY ${dir} AND EXISTS ${dir}/CMakeLists.txt)
     add_subdirectory(${dir})
   endif()
+endforeach()
 endforeach()
