--- a/cmake/CMakeLists.txt
+++ b/cmake/CMakeLists.txt
@@ -16,13 +16,11 @@ endif()
 if(${CMAKE_COMPILER} STREQUAL gcc)
   cms_find_package(gcc_cxxcompiler)
   cms_find_package(gcc_ccompiler)
-  list(APPEND PROJECT_CXXFLAGS ${gcc_cxxcompiler_PROJECT_CXXFLAGS})
-  list(APPEND PROJECT_CFLAGS ${gcc_cxxcompiler_PROJECT_CFLAGS})
 endif()
-list(APPEND PROJECT_CPPDEFINES ${CMAKE_CPPDEFINES} -DBOOST_DISABLE_ASSERTS)
-list(APPEND PROJECT_CPPDEFINES ${CMAKE_CPPDEFINES} -DCMSSW_GIT_HASH="CMSSW_10_1_0" -DPROJECT_NAME="CMSSW" -DPROJECT_VERSION="CMSSW_10_1_0")
-list(APPEND LIBRARY_DIRS ${CMAKE_INSTALL_PREFIX}/external/${SCRAM_ARCH}/lib ${GCC_CXXCOMPILER_ROOT}/lib ${GCC_CXXCOMPILER_ROOT}/lib64)
-list(APPEND INCLUDE_DIRS ${CMAKE_SOURCE_DIR})
+set(PROJECT_CPPDEFINES ${CMAKE_CPPDEFINES} -DBOOST_DISABLE_ASSERTS)
+set(PROJECT_CPPDEFINES ${CMAKE_CPPDEFINES} -DCMSSW_GIT_HASH="CMSSW_10_1_0" -DPROJECT_NAME="CMSSW" -DPROJECT_VERSION="CMSSW_10_1_0")
+set(LIBRARY_DIRS ${CMAKE_INSTALL_PREFIX}/external/${SCRAM_ARCH}/lib ${GCC_CXXCOMPILER_ROOT}/lib ${GCC_CXXCOMPILER_ROOT}/lib64)
+set(INCLUDE_DIRS ${INCLUDE_DIRS} ${CMAKE_SOURCE_DIR})
 set(CMAKE_EXE_LINKER_FLAGS -pthread)
 include(CTest)
 set(dirnames src bin test plugins interface)
