--- a/cmake/CMakeLists.txt
+++ b/cmake/CMakeLists.txt
@@ -3,8 +3,8 @@ project(cmssw C CXX Fortran)
 set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${CMAKE_SOURCE_DIR}/../cmssw-cmake/tools)
 set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${CMAKE_SOURCE_DIR}/../cmssw-cmake/coral)
 set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${CMAKE_SOURCE_DIR}/../cmssw-cmake/cmssw)
-#set(CMAKE_SKIP_RPATH ON)
-set(CMAKE_BUILD_TYPE RELEASE)
+set(CMAKE_SKIP_RPATH ON)
+set(CMAKE_BUILD_TYPE Release)
 set(CMAKE_CXX_FLAGS_RELEASE_INIT "")
 set(CMAKE_CXX_FLAGS_INIT "")
 set(CMAKE_CXX_FLAGS_RELEASE "")
@@ -13,16 +13,14 @@ include (${CMAKE_SOURCE_DIR}/../cmssw-cmake/cmake/all.cmake)
 if(NOT CMAKE_COMPILER)
   set(CMAKE_COMPILER gcc)
 endif()
-if(${CMAKE_COMPILER} STREQUAL gcc)
-  cms_find_package(gcc_cxxcompiler)
-  cms_find_package(gcc_ccompiler)
-endif()
-set(PROJECT_CPPDEFINES ${CMAKE_CPPDEFINES} -DBOOST_DISABLE_ASSERTS)
-set(PROJECT_CPPDEFINES ${CMAKE_CPPDEFINES} -DCMSSW_GIT_HASH="CMSSW" -DPROJECT_NAME="CMSSW" -DPROJECT_VERSION="CMSSW")
-set(LIBRARY_DIRS ${CMAKE_INSTALL_PREFIX}/lib/${SCRAM_ARCH} ${CMAKE_INSTALL_PREFIX}/external/${SCRAM_ARCH}/lib ${GCC_CXXCOMPILER_ROOT}/lib ${GCC_CXXCOMPILER_ROOT}/lib64)
-set(INCLUDE_DIRS ${INCLUDE_DIRS} ${CMAKE_SOURCE_DIR})
+cms_find_package(${CMAKE_COMPILER}_cxxcompiler)
+cms_find_package(${CMAKE_COMPILER}_ccompiler)
+cms_find_package(${CMAKE_COMPILER}_f77compiler)
+set(LINK_DIRECTORIES ${CMAKE_INSTALL_PREFIX}/lib/${SCRAM_ARCH} ${CMAKE_INSTALL_PREFIX}/external/${SCRAM_ARCH}/lib ${GCC_CXXCOMPILER_ROOT}/lib ${GCC_CXXCOMPILER_ROOT}/lib64)
+set(INCLUDE_DIRECTORIES ${INCLUDE_DIRECTORIES} ${CMAKE_SOURCE_DIR})
 set(CMAKE_EXE_LINKER_FLAGS -pthread)
-include(CTest)
+#include(CTest)
+#process_subdirs(${CMAKE_CURRENT_SOURCE_DIR})
 set(dirnames src bin test plugins interface)
 foreach(dirname ${dirnames})
 file(GLOB subdirs "*/*/${dirname}")
