--- a/cmake/CMakeLists.txt
+++ b/cmake/CMakeLists.txt
@@ -1,15 +1,7 @@
 cmake_minimum_required(VERSION 3.8 FATAL_ERROR)
 project(cmssw C CXX Fortran)
-#set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${CMAKE_SOURCE_DIR}/../cmssw-cmake/tools)
-#set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${CMAKE_SOURCE_DIR}/../cmssw-cmake/coral)
-#set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${CMAKE_SOURCE_DIR}/../cmssw-cmake/cmssw)
-set(CMAKE_SKIP_RPATH ON)
-set(CMAKE_BUILD_TYPE RELEASE)
-set(CMAKE_CXX_FLAGS_RELEASE_INIT "")
-set(CMAKE_CXX_FLAGS_INIT "")
-set(CMAKE_CXX_FLAGS_RELEASE "")
-set(CMAKE_CXX_FLAGS "")
-include (${CMAKE_SOURCE_DIR}/../cmssw-cmake/cmake/all.cmake)
+
+include (${CMAKE_SOURCE_DIR}/cmssw-cmake/cmake/all.cmake)
 if(NOT CMAKE_COMPILER)
   set(CMAKE_COMPILER gcc)
 endif()
@@ -17,13 +9,17 @@ if(${CMAKE_COMPILER} STREQUAL gcc)
   cms_find_package(gcc_cxxcompiler)
   cms_find_package(gcc_ccompiler)
 endif()
-set(PROJECT_CPPDEFINES ${CMAKE_CPPDEFINES} -DBOOST_DISABLE_ASSERTS)
-set(PROJECT_CPPDEFINES ${CMAKE_CPPDEFINES} -DCMSSW_GIT_HASH="CMSSW_10_1_0" -DPROJECT_NAME="CMSSW" -DPROJECT_VERSION="CMSSW_10_1_0")
-set(LIBRARY_DIRS ${CMAKE_INSTALL_PREFIX}/external/${SCRAM_ARCH}/lib ${GCC_CXXCOMPILER_ROOT}/lib ${GCC_CXXCOMPILER_ROOT}/lib64)
-set(INCLUDE_DIRS ${INCLUDE_DIRS} ${CMAKE_SOURCE_DIR})
-set(CMAKE_EXE_LINKER_FLAGS -pthread)
+
+set(PROJECT_CPPDEFINES -DBOOST_DISABLE_ASSERTS -DCMSSW_GIT_HASH="CMSSW_10_5_0" -DPROJECT_NAME="CMSSW" -DPROJECT_VERSION="CMSSW_10_5_0")
+set(PROJECT_CXXFLAGS )
+set(PROJECT_CFLAGS )
+set(PROJECT_FFLAGS )
+set(PROJECT_LDFLAGS )
+set(LIBRARY_DIRS ${CMAKE_INSTALL_PREFIX}/lib)
+set(INCLUDE_DIRS ${CMAKE_SOURCE_DIR})
+list(APPEND INCLUDE_DIRS ${CMAKE_INSTALL_PREFIX}/include)
 include(CTest)
-file(GLOB subdirs "*/*/*")
+file(GLOB subdirs "[A-Z]*/*")
 foreach(dir ${subdirs})
   if(IS_DIRECTORY ${dir} AND EXISTS ${dir}/CMakeLists.txt)
     add_subdirectory(${dir})
